--- a/app/studiox/studiox.module.css
+++ b/app/studiox/studiox.module.css
@@ -57,39 +57,50 @@
 
 }
 
-.button1 {
-  font-size: 14px;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 400;
-  color: #fff;
-  background-color: transparent;
-  padding: 10px 20px;
-  border: 1px solid #fff;
-  border-radius: 25px;
-  cursor: pointer;
-  transition: 0.3s ease;
-  margin-top: 20px;
+.buttonWrapper {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    gap: 11px;
+
 }
+
+.button1 {
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    color: #fff;
+    background-color: transparent;
+    padding: 10px 20px;
+    border: 1px solid #fff;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: 0.3s ease;
+    margin-top: 20px;
+
+}
+
 .button1:hover {
-  background-color: #fff;
-  color: #000;
+    background-color: #fff;
+    color: #000;
 }
 
 .button2 {
     display: flex;
     flex-direction: column;
-  font-size: 14px;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 400;
-  color: #fff;
-background: linear-gradient(134deg, rgba(126, 65, 163, 1) 6%, rgba(230, 39, 39, 1) 88%);  padding: 10px 20px;
-  border: 1px solid #fff;
-  border-radius: 25px;
-  cursor: pointer;
-  transition: 0.3s ease;
-  margin-top: 20px;
-}
-.button2:hover {
-background: linear-gradient(285deg,rgba(126, 65, 163, 1) 6%, rgba(230, 39, 39, 1) 88%);
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    color: #fff;
+    background: linear-gradient(134deg, rgba(126, 65, 163, 1) 6%, rgba(230, 39, 39, 1) 88%);
+    padding: 10px 20px;
+    border: 0px solid #fff;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: 0.3s ease;
+    margin-top: 20px;
 }
 
+.button2:hover {
+    background: linear-gradient(285deg, rgba(126, 65, 163, 1) 6%, rgba(230, 39, 39, 1) 88%);
+}
