--- a/components/studioxCarousal/studioxCarousal.module.css
+++ b/components/studioxCarousal/studioxCarousal.module.css
@@ -1,6 +1,6 @@
 .studioxCarousalWrapper {
     width: 100%;
-    padding: 30px;
+    
     color: #fff;
   }
   
@@ -9,7 +9,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: center;
     margin-bottom: 20px;
   }
   
@@ -17,51 +16,83 @@
     font-size: 48px;
     font-weight: 600;
   }
+
+  .studioxCarousalItem{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+
+  }
   
   .studioxCarousalItem video {
-    width: 100%;
+    
     border-radius: 16px;
+    width: 100%;
+    @media (min-width: 1200px) and (max-width: 1299.98px) {
+        width: 60%;
+      }
+    @media (min-width:1300px) and (max-width:1399.98px) {
+        width: 80%;
+    }
+    @media (min-width:1400px) and (max-width:1599.98px) {
+        width: 80%;
+        
+    }
+
+      
+    
   }
   
   .studioxCarousalControls {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     margin-top: 20px;
     gap: 10px;
     
+    
+
+    
   }
-  
-  .control {
-    cursor: pointer;
-    background: rgba(255, 255, 255, 0.05);
-    padding: 15px 20px;
-    border-radius: 12px;
-    transition: all 0.3s ease;
-    min-width: 200px;
-    text-align: center;
+  .control{
+    max-width: calc(100% / 5);
+    flex: 1 calc(100% / 5);
+    position: relative;
+    color: #989898;
+    border: 1px solid rgba(83, 85, 95, 0.5);
+    h4{
+        font-size: 16px;
+        font-weight: 600;
+    }
+    p{
+        font-size: 16px;
+        font-weight: 400;
+    }
+      .controlContent {
+        width: 100%;
+        padding: 10px;
+      }
   }
-  
-  .control.active {
-    background: rgba(255, 255, 255, 0.15);
+  .studioxCarousalVideo{
+    object-fit: cover;
   }
-  
+  .control.active{
+    color: #fff;
+  }
   .progressBar {
     width: 100%;
     height: 3px;
-    background: rgba(255, 255, 255, 0.1);
-    margin-top: 8px;
     border-radius: 3px;
     overflow: hidden;
+position: absolute ;
+bottom: 0;
   }
-  
   .progressFill {
     height: 100%;
     background: linear-gradient(130.35deg, #6441A5 1.92%, #D3342E 98.08%);
     transition: width 0.1s linear;
   }
-  
+
   .dot {
     width: 10px;
     height: 10px;
@@ -74,6 +105,7 @@
   .active .dot {
     background: grey;
   }
+
   
   @media (max-width: 768px) {
     .control {
