--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -5,57 +5,7 @@
   padding-bottom: 40px;
 }
 
-.newsletter {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 40px;
-  gap: 15px;
-}
 
-.newsletter h2 {
-  font-weight: 500;
-  font-size: 18px;
-}
-
-.form {
-  display: flex;
-  align-items: center;
-  border: 1px solid #fff;
-  border-radius: 50px;
-  overflow: hidden;
-  width: 500px;
-  max-width: 90%;
-}
-
-.input {
-  flex: 1;
-  padding: 12px 20px;
-  border: none;
-  outline: none;
-  background-color: transparent;
-  color: #fff;
-  font-size: 14px;
-}
-
-.input::placeholder {
-  color: #ccc;
-}
-
-.submit {
-  background-color: #fff;
-  color: #000;
-  border: none;
-  padding: 12px 25px;
-  border-radius: 0 50px 50px 0;
-  font-size: 14px;
-  cursor: pointer;
-  transition: 0.3s ease;
-}
-
-.submit:hover {
-  transition: 0.3s ease;
-}
 
 .line {
   margin: 40px auto;
@@ -110,4 +60,15 @@
 .socials svg:hover {
   color: #ccc;
   
+}
+
+.right{
+  display: flex;
+  align-items: center;
+}
+
+.socials{
+  margin-left: 10px;
+  font-size: 12px;
+
 }
