--- a/components/getInTouch/getInTouch.module.css
+++ b/components/getInTouch/getInTouch.module.css
@@ -32,3 +32,55 @@
   background-color: #fff;
   color: #000;
 }
+
+.newsletter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 40px;
+  gap: 15px;
+}
+
+.newsletter h2 {
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.form {
+  display: flex;
+  align-items: center;
+  border: 1px solid #fff;
+  border-radius: 50px;
+  overflow: hidden;
+  width: 500px;
+  max-width: 90%;
+}
+
+.input {
+  flex: 1;
+  padding: 12px 20px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  color: #fff;
+  font-size: 14px;
+}
+
+.input::placeholder {
+  color: #ccc;
+}
+
+.submit {
+  background-color: #fff;
+  color: #000;
+  border: none;
+  padding: 12px 25px;
+  border-radius: 0 50px 50px 0;
+  font-size: 14px;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.submit:hover {
+  transition: 0.3s ease;
+}
