--- a/components/studioxBanner/studioxBanner.module.css
+++ b/components/studioxBanner/studioxBanner.module.css
@@ -5,6 +5,7 @@
     align-items: center;
     height: 100vh;
     overflow: hidden;
+    font-family: 'Poppins', sans-serif;
 }
 
 .backgroundVideo {
@@ -21,6 +22,7 @@
     z-index: 10;
     position: relative;
     text-align: center;
+    margin-bottom: 30px;
 }
 
 
@@ -33,28 +35,27 @@
     z-index: 5;
     text-align: center;
     color: #fff;
-    padding: 2rem;
 
 }
 
 .h1 {
-    font-size: 5rem;
+    font-size: 60px;
     font-weight: bold;
-    line-height: 5.5rem;
+    line-height: 1;
+    margin-bottom: 30px;
 
 }
 
 .h2 {
-    font-size: 1.5rem;
+    font-size: 24px;
     font-weight: 600;
-    padding-top: 1.5rem;
+    margin-bottom: 10px;
 }
 
-.h3 {
-    font-size: 1.2rem;
+.p {
+    font-size: 18px;
     font-weight: 400;
-    padding-top: 1.5rem;
-
+    margin-bottom: 30px;
 }
 
 .buttonWrapper {
@@ -66,12 +67,12 @@
 }
 
 .button1 {
-    font-size: 14px;
+    font-size: 16px;
     font-family: 'Poppins', sans-serif;
-    font-weight: 400;
+    font-weight: 500;
     color: #fff;
     background-color: transparent;
-    padding: 10px 20px;
+    padding: 12px 24px;
     border: 1px solid #fff;
     border-radius: 25px;
     cursor: pointer;
@@ -88,12 +89,12 @@
 .button2 {
     display: flex;
     flex-direction: column;
-    font-size: 14px;
+    font-size: 16px;
     font-family: 'Poppins', sans-serif;
-    font-weight: 400;
+    font-weight: 500;
     color: #fff;
     background: linear-gradient(130.35deg, #6441A5 1.92%, #D3342E 98.08%);
-    padding: 10px 20px;
+    padding: 12px 24px;
     border: 0px solid #fff;
     border-radius: 25px;
     cursor: pointer;
