--- a/components/studoxFooter/studioxFooter.module.css
+++ b/components/studoxFooter/studioxFooter.module.css
@@ -1,4 +1,4 @@
-.footer {
+.studiofooter {
     position: relative;
     padding: 0;
     overflow: hidden;
@@ -70,6 +70,11 @@
         line-height: 24px;
         text-align: center;
     }
+    .logo{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
   
   .footer__container2 {
@@ -80,7 +85,7 @@
     background-size: cover;
     position: relative;
     z-index: 0;
-    height: 50vh;
+    min-height: 60vh;
   }
   
   /* Overlay on top of image */
