--- a/components/studioxBattleTested/studioxBattleTested.module.css
+++ b/components/studioxBattleTested/studioxBattleTested.module.css
@@ -46,20 +46,20 @@
 }
 
 .h1 {
-  font-size: 3rem;
+  font-size: 2.25rem; /* h2 size - 36px */
   font-weight: 600;
   margin-bottom: 20px;
 }
 
 .h2 {
-  font-size: 20px;
-  font-weight: 500;
+  font-size: 18px; /* paragraph size */
+  font-weight: 400;
   line-height: 28px;
   margin-bottom: 26px;
 }
 
 .h3 {
-  font-size: 20px;
+  font-size: 1.875rem; /* h3 size - 30px */
   font-weight: 700;
   margin-bottom: 26px;
 }
@@ -91,7 +91,7 @@
 
 
 .title {
-  font-size: 1.1rem;
+  font-size: 1.25rem; /* h5 size - 20px */
   font-weight: 700;
   margin-bottom: 10px;
   text-align: left;
