--- a/components/studoxFooter/studioxFooter.module.css
+++ b/components/studoxFooter/studioxFooter.module.css
@@ -48,11 +48,30 @@
     font-family: 'Poppins', sans-serif;
     h2{
         color: #fff;
-        font-size: 48px;
+        font-size: 2.25rem; /* h2 size - 36px */
         font-weight: 600;
         line-height: 56px;
         margin-bottom: 12px;
         text-align: center;
+    }
+    input {
+        padding: 12px 24px;
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        border-radius: 25px;
+        background: rgba(255, 255, 255, 0.1);
+        color: #fff;
+        font-size: 16px;
+        font-family: 'Poppins', sans-serif;
+        width: 100%;
+        max-width: 400px;
+    }
+    input::placeholder {
+        color: rgba(255, 255, 255, 0.7);
+    }
+    input:focus {
+        outline: 2px solid #6441A5;
+        outline-offset: 2px;
+        border-color: #6441A5;
     }
     .p1{
         color: #fff;
