--- a/components/card/card.module.css
+++ b/components/card/card.module.css
@@ -7,6 +7,7 @@
     height: 100%;
 
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .card{
@@ -82,5 +83,53 @@ border-color: #d8342f;
 .authorNameText {
     font-weight: 600;
     color: #53555f;
-    
+}
+
+/* Mobile Responsive Styles */
+@media (min-width: 0) and (max-width: 767.98px) {
+    .cardContainer {
+        flex-direction: column;
+        margin-top: 30px;
+        gap: 20px;
+    }
+
+    .card {
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 0;
+    }
+
+    .cardHeader {
+        height: 200px;
+    }
+
+    .cardBody {
+        padding: 20px;
+    }
+
+    .cardTitle {
+        font-size: 18px;
+        line-height: 1.4;
+    }
+
+    .cardDateText {
+        font-size: 12px;
+    }
+
+    .cardLink {
+        font-size: 12px;
+        padding: 8px 18px;
+    }
+}
+
+/* Tablet Responsive Styles */
+@media (min-width: 768px) and (max-width: 1023.98px) {
+    .card {
+        width: calc(100% / 2 - 15px);
+        margin-right: 15px;
+    }
+
+    .cardContainer {
+        margin-top: 40px;
+    }
 }
