--- a/components/studioxBattleTested/studioxBattleTested.module.css
+++ b/components/studioxBattleTested/studioxBattleTested.module.css
@@ -68,7 +68,6 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 60px;
-  justify-items: center;
   padding: 80px;
   background-color: #000;
   color: #fff;
@@ -78,7 +77,6 @@
 }
 
 .featureBox {
-  text-align: center;
   max-width: 260px;
   position: relative;
 }
@@ -113,27 +111,26 @@
     }
 
     .textSection {
-        padding: 40px 20px;
+        padding: 0 20px;
     }
 
     .h1 {
-        font-size: 1.75rem; /* 28px */
+        font-size: 32px;
         margin-bottom: 15px;
     }
 
     .h2 {
-        font-size: 16px;
+        font-size: 20px;
         line-height: 24px;
         margin-bottom: 20px;
     }
 
     .h3 {
-        font-size: 1.5rem; /* 24px */
+        font-size: 20px;
         margin-bottom: 20px;
     }
 
     .featuresContainer {
-        grid-template-columns: 1fr;
         gap: 40px;
         padding: 40px 20px;
         margin: 0 !important;
@@ -145,16 +142,18 @@
 
     .iconWrapper {
         margin-bottom: 15px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
     }
 
     .title {
         font-size: 1.125rem; /* 18px */
-        text-align: center;
     }
 
     .description {
         font-size: 0.875rem;
-        text-align: center;
     }
 }
 
