--- a/components/studioxFeatures/studioxFeatures.module.css
+++ b/components/studioxFeatures/studioxFeatures.module.css
@@ -151,9 +151,8 @@
     }
 
     .studioxFeaturesTitleWrapper {
-        flex-direction: column;
+        align-items: center;
         gap: 15px;
-        padding: 85px 0 40px 0;
     }
 
     .studioxFeaturesTitleWrapper .studioxFeaturesTitle {
@@ -164,7 +163,7 @@
     .studioxFeaturesCardsWrapper {
         flex-direction: column;
         gap: 20px;
-        padding: 0;
+        padding-top: 36px;
     }
 
     .studioxFeaturesCards {
@@ -199,7 +198,7 @@
         max-width: 100%;
         flex: 0 0 100%;
         width: 100%;
-        height: 300px;
+        height: 200px;
     }
 
     .studioxFeaturesCardThree {
