--- a/components/studioxGotALaunch/studioxGotALaunch.module.css
+++ b/components/studioxGotALaunch/studioxGotALaunch.module.css
@@ -41,7 +41,6 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     padding: 0 36px 0 0;
 }
 
@@ -154,13 +153,9 @@
 @media (max-width: 992px) {
     .launchSection {
         flex-direction: column;
-        text-align: center;
     }
 
-    .textSection {
-        align-items: center;
-    }
-
+    
     .imageContainer {
         width: 100%;
         height: 300px;
@@ -177,8 +172,6 @@
 
     .textSection {
         padding: 0;
-        align-items: center;
-        text-align: center;
     }
 
     .content {
@@ -209,7 +202,6 @@
         font-size: 14px;
         padding: 10px 20px;
         margin: 15px 0 0;
-        width: 100%;
         max-width: 100%;
     }
 
@@ -217,6 +209,7 @@
         width: 100%;
         height: 250px;
         margin-top: 30px;
+        touch-action: pan-x pan-y;
     }
 
     .dots {
@@ -245,8 +238,6 @@
 
     .textSection {
         padding: 0;
-        align-items: center;
-        text-align: center;
     }
 
     .content {
