--- a/components/studoxFooter/studioxFooter.module.css
+++ b/components/studoxFooter/studioxFooter.module.css
@@ -15,6 +15,7 @@
     background-size: cover;
     position: relative;
     z-index: 0;
+    margin: 25px;
   }
   
   /* Overlay on top of image */
@@ -132,7 +133,7 @@
     text-align: center; 
     justify-content: center;
   }
-
+  
 /* Mobile Responsive Styles */
 @media (min-width: 0) and (max-width: 767.98px) {
     .studiofooter {
