--- a/components/card/card.module.css
+++ b/components/card/card.module.css
@@ -56,6 +56,18 @@
     line-height: 1.5;
 }
 
+.cardTitleLink {
+    color: inherit;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.cardTitleLink:hover,
+.cardTitleLink:focus {
+    color: #d8342f;
+    text-decoration: underline;
+}
+
 
 .cardFooter {
     display: flex;
